[package]
name = "libresolv"
description = "Dependency resolution library intended for use in package managers"

version = "0.1.0"
edition = "2021"
authors = ["poscat <poscat@poscat.moe>"]

repository = "https://github.com/poscat0x04/libresolv"

readme = "README.md"
license = "BSD-3"

[features]
arbitrary = ["dep:proptest"]

[dependencies]
itertools = "0.12"
intmap = "2.0"
bumpalo = "3.14"
termcolor = "1.4"
indexmap = "2.1"

[dependencies.z3]
version = "0.12"
registry = "gitea"

[dependencies.pretty]
version = "0.12"
features = ["termcolor"]

[dependencies.proptest]
version = "1.4"
optional = true

[dependencies.tinyset]
version = "0.4"
default-features = false

[dependencies.rkyv]
version = "0.7"
features = ["indexmap"]

[lib]
name = "libresolv"
path = "src/lib.rs"
test = true
doctest = true
bench = false
doc = true
crate-type = ["lib", "staticlib", "cdylib"]

[profile.release]
opt = "s"
lto = true
